syntax = "proto3";
option go_package = "github.com/ray1422/dcard-backend-2023/controller/pb";
package pb;

import "google/protobuf/timestamp.proto";

service ListService {
    rpc Head(HeadRequest) returns  (HeadReply) {}
    rpc DeleteList(DeleteListRequest) returns (DeleteListReply){}
    rpc CreateList(CreateListRequest) returns (CreateListReply){}
    rpc SetList(stream SetListRequest) returns (stream SetListReply) {}
    rpc SetListVersion(SetListVersionRequest) returns (SetListVersionReply) {}
    rpc DeleteListNodeBefore(DeleteListNodeBeforeRequest) returns (DeleteListNodeBeforeReply) {}
}
message HeadRequest {
    string key = 1;
}
message HeadReply {
    enum statusT{
        OK = 0;
        NOT_FOUND = 1;
        INTERNAL_ERROR = 2;
    }
    statusT status = 1;
    uint32 list_id = 2;
}
message CreateListRequest {
    string list_key = 1;
}
message CreateListReply {
    enum statusT{
        OK = 0;
        DUPLICATE_KEY = 1;
        INTERNAL_ERROR = 2;
    }
    statusT status = 1;
    uint32 list_id = 2;
}

message DeleteListRequest {
    uint32 list_id = 1;
}
message DeleteListReply{
    enum statusT{
        OK = 0;
        NOT_FOUND = 1;
        INTERNAL_ERROR = 2;
    }
    statusT status = 1;
    uint32 list_id = 2;
}

message SetListRequest {
    uint32 list_id = 1;
    uint32 version = 2;
    repeated Node nodes = 3;
}
message Node {
    uint32 order = 1;
    uint32 article_id = 4;
}

message SetListReply {
    enum statusT{
        OK = 0;
        INTERNAL_ERROR = 1;
    }
    statusT status = 1;
}

message SetListVersionRequest {
    uint32 list_id = 1;
    uint32 version = 2;
}

message SetListVersionReply {
    enum statusT{
        OK = 0;
        NOT_FOUND = 1;
        INTERNAL_ERROR = 2;
    }
    statusT status = 1;
}


message DeleteListNodeBeforeRequest {
    google.protobuf.Timestamp before = 1;
}

message DeleteListNodeBeforeReply{
    enum statusT{
        OK = 0;
        INTERNAL_ERROR = 1;
    }
    statusT status = 1;
}
